# dockumentor

./: pyproject.toml  readme.md
src/dockumentor/: cli.py  graph.py  parser.py  renderer.py  types.py
src/dockumentor/templates/: dockumentor_compose.md
